--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 @import 'remixicon/fonts/remixicon.css';
 
 :root {
-    --primary-color: #0E6BA8 !important;
+    --primary-color: #4d8be9 !important;
     --secondary-color: #071108 !important;
     /* --primary-light-01: #fc410010;
     --primary-light-02: #fc410010;
@@ -44,4 +44,39 @@ body {
     overflow: hidden !important;
 }
 
+.custom-shadow {
+  box-shadow: 0px 2px 5px var(--primary-color);
+}
 
+/* Navbar */
+
+.active-links {
+    color: var(--primary-color);
+}
+
+.active-links:after, .nav-menu a:after, .menu li a:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--primary-color);
+    transition: var(--transition-regular);
+}
+
+.nav-menu a:after, .menu li a:after {
+    opacity: 0;
+}
+
+.nav-menu a:hover:after, .menu li a:hover:after {
+    opacity: 1;
+}
+
+.menu li a {
+    padding-bottom: 10px;
+}
+
+.active-links:after {
+    opacity: 1 !important;
+}
