--- a/app/globals.css
+++ b/app/globals.css
@@ -10,10 +10,6 @@
 :root {
     --primary-color: #4d8be9 !important;
     --secondary-color: #071108 !important;
-    /* --primary-light-01: #fc410010;
-    --primary-light-02: #fc410010;
-    --hero-image-from: #f8b4741a;
-    --hero-image-to: #ff4c1f0c; */
     --primary-light-1: #0077ff10;
     --primary-light-2: #0077ff10; 
     --hero-image-from: #74b9ff1a;  
@@ -79,6 +75,36 @@ body {
 
 .active-links:after {
     opacity: 1 !important;
+}
+
+/* Header */
+
+.hero-image:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0) 48%, rgba(0,0,0,0.1) 100%);
+}
+
+.hero-social i {
+    width: 50px;
+    height: 50px;
+    border: 1px solid var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    cursor: pointer;
+    transition: var(--transition-regular);
+}
+
+.hero-social i:hover {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    transform: translateY(-10px);
 }
 
 
