--- a/app/globals.css
+++ b/app/globals.css
@@ -115,7 +115,14 @@ body {
 
 @media (max-width: 991px) {
     body {
-        /* overflow-x: hidden !important; */
+        overflow-x: hidden !important;
+        overflow-y: scroll !important;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        overflow-x: hidden !important;
         overflow-y: scroll !important;
     }
 }
