--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,27 @@ body {
     -webkit-text-stroke: 1px var(--primary-color);
 }
 
+/* Custom Scrollbar */
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-color);
+}
+
 
 
 
